--- a/src/css/common.css
+++ b/src/css/common.css
@@ -75,3 +75,14 @@ img {
 .is-hidden {
   display: none;
 }
+
+.load-more {
+  margin: 10px auto;
+  padding: 8px 12px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid #007bff;
+  border-radius: 0 4px 4px 0;
+  cursor: pointer;
+}
